@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2011 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2026 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -33,5 +33,6 @@
 #endif /* SHOPT_MULTIBYTE */
 
 extern int sh_strchr(const char*,const char*);
+extern int sh_strwidth(const char*);
 
 #endif /* _national_h_defined */
