@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2026 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -679,6 +679,22 @@ int sh_strchr(const char *string, const char *dp)
 	}
 	cp = strchr(string,*dp);
 	return cp ? cp-string : -1;
+}
+
+/*
+ * Return the number of terminal columns occupied by a string when printed.
+ */
+int sh_strwidth(const char *s)
+{
+	int w = 0, c, n;
+	while (c = mbchar(s))
+	{
+		if (c < 0)				/* invalid multibyte character: count as 1 position */
+			w++;
+		else if ((n = mbwidth(c)) > 0)		/* don't count control characters (which yield -1) */
+			w += n;
+	}
+	return w;
 }
 
 const char *_sh_translate(const char *message)
