@@ -2,6 +2,12 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2026-02-24:
+
+- The routine that prints the menu for the 'select' loop has been made aware
+  of multibyte character locales, so that using UTF-8 characters will no
+  longer result in menu columns that are not properly lined up.
+
 2026-02-17:
 
 - Fixed a regression introduced on 02-02-2022 occurring on systems with
